--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,10 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- Lightbox -->
     <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
-    <title>BT Real Estate</title>
+
+    <title>BT Real Estate {% block title %}{% endblock %}</title>
   </head>
+
   <body>
     <!-- Top Bar -->
     {% include 'partials/_topbar.html' %}
